   to modify the initialization in VanillaICE, but I had problems with
   this

02-20-2010 - R. Scharpf (1.9.30)

** moved A, B accessors from crlmm to oligoClasses.  Updated a few of the man pages.
** added oligoClasses.Rnw vignette

03-04-2010 - B Carvalho (1.9.32)

** exposed DBPDInfo, ExpressionPDInfo, FeatureSet, TilingPDInfo
** fixed NEWS file

03-10-2010 - R.Scharpf (1.9.35)

** export A<-, B<- for AlleleSet

03-10-2010 - B Carvalho (1.9.37)

** adding ff utilities to be used in oligo and crlmm
** adding tools to diagnose cluster/large dataset support
** (1.9.39) fixed broken export and added p2i/i2p functions to simplify future changes on the conversion
** (1.9.40) fixed oligoProbeset/oligoSamples to be ocProbesets/ocSamples
** (1.9.41) fixed unload / docs

03-20-2010 - B Carvalho (1.9.44)

** fixed bugs that broke oligo::crlmm (initialization method for AlleleSet and getM/getA)

03-22-2010 - B Carvalho (1.9.45)

** add some docs
** commented out example (CNSet) the breaks completely the build process
** added eval=FALSE on the vignette on the relevant part so the pkg can be built
** fixed initialization for CNSet to conform changes on 1.9.44.

03-22-2010 - B Carvalho (1.9.46)

** fixed is.ffmatrix example
** fixed alias for allele

03-31-2010 - B Carvalho (1.9.50)

** moved initializeBigMatrix and initializeBigVector from crlmm to oligoClasses

03-31-2010 - R. Scharpf (1.9.51)

** added a few Rd files

04-03-2010 - R. Scharpf (1.9.52)

** added a few Rd files

04-04-2010 - R. Scharpf (1.9.53)

** addFeatureAnnotation.crlmm provides a warning rather than perform a
   subset operation on the eSet object.  Subset operations are
   dangerous with ff objects

04-08-2010 - B Carvalho (1.9.54)

** moved NEWS to inst/

04-10-2010 - B Carvalho (1.9.55)

** initializeBig(Vector/Matrix) get a 'initdata' argument

05-22-2010 - R. Scharpf (1.11.1)

** fixed man page for requireClusterPkgSet.  Added integerScoreToProbability function.